...
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:orientation="vertical"
            tools:ignore="NestedWeights">

            <TextView
                android:id="@+id/platformTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold"
                android:textColor="?attr/colorOnSurface"
                tools:text="@string/embed_friendly_link" />
...
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_tiny"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:id="@+id/textViewPlatformProxyStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_tiny"
                    android:textColor="?attr/colorOnSurfaceVariant"
                    android:singleLine="true"
                    android:ellipsize="middle"
                    tools:text="Active: toinstagram.com." />

                <TextView
                    android:id="@+id/textViewChangeProxy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="@dimen/min_touch_target_size"
                    android:minHeight="@dimen/min_touch_target_size"
                    android:gravity="center_vertical"
                    android:paddingTop="@dimen/padding_small"
...
