...
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/padding_medium">

    <View
        android:id="@+id/proxyPickerDragHandle"
        android:layout_width="@dimen/padding_xlarge"
        android:layout_height="@dimen/margin_extra_small"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_small"
        android:background="@drawable/bg_bottom_sheet_handle"
        android:importantForAccessibility="no" />
...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_large"
        android:layout_marginEnd="@dimen/padding_large" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewProxyPicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:nestedScrollingEnabled="true"
        tools:listitem="@layout/item_proxy_option" />

...
