...
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        android:textColor="?attr/colorOnSurface"
        android:ellipsize="end"
        android:maxLines="2" />

    <ImageButton
        android:id="@+id/proxyDeleteButton"
        android:layout_width="@dimen/proxy_option_icon_size"
        android:layout_height="@dimen/proxy_option_icon_size"
        android:src="@drawable/ic_delete"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/delete_proxy_button_desc"
        android:tint="?attr/colorError"
...
